syntax = "proto3";

package settlement;

service SettlementService {
  rpc Transfer(TransferRequest) returns (TransferResponse);
}

message TransferRequest {
  string senderBIC = 1;
  string receiverBIC = 2;
  double amount = 3;
}

message TransferResponse {
  bool success = 1;
  string message = 2;
}
